<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    tools:context=".Search">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent"
        android:textColor="#92D8FC"
        android:layout_margin="20dp"
        android:textSize="20dp" />
   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="20dp"
       android:gravity="center"
       android:layout_gravity="center"
       android:layout_marginRight="20dp"
       android:layout_height="wrap_content">
       <Button
           android:id="@+id/problem"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:elevation="10dp"
           android:text="@string/problem" />
       <Button
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:elevation="10dp"
           android:text="@string/power" />
       <Button
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:elevation="10dp"
           android:text="@string/wind" />
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:text="@string/gas" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:text="@string/petrol" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:text="@string/solar" />
    </LinearLayout>
    <TextView
        android:id="@+id/popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/popular_search"
        android:textColor="#92D8FC"
        android:textSize="20dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" />

</LinearLayout>
